# zombuild

./: LICENSE  README.MD  build.bat  pyproject.toml  requirements.txt  zombuild.cmd
zombuild/: __init__.py  __main__.py  _arguments.py  _exception.py  _invocation.py  _invocation_base.py  _invocation_plugins.py  _package.py  _schema.py  console.py  fs.py  lifecycle_mixins.py  paths.py  theme.py
zombuild/config/: __init__.py  _include.py  _types.py  definitions.py  externalstring.py  include.py  modinfo.py  package.py  plugin.py  task.py  types.py  withpath.py
zombuild/plugins/: __init__.py  _decorator.py  _plugin.py  features.py
zombuild/tasks/: __init__.py  _default.py  _files.py  _filter.py  _task.py
zombuild_codegen/: __init__.py
zombuild_core/: BuildTask.py  CleanTask.py  InstallTask.py  __init__.py  _action_default.py  _action_jsonmerge.py  _action_translations.py  _modinfo.py  action_provider.py
